--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Food</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/icons/favicon.png">
-    <link href="./css/reset.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="./images/icons/favicon.ico">
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
 
