--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
                 </a>
 
                 <ul class="menu__list">
-                    <li class="menu__item">
+                    <li class="menu__item menu__item--active">
                         <a class="menu__link" href="">Головна</a>
                     </li>
 
@@ -108,7 +108,7 @@
                     <ul class="categories__filter">
 
                         <li class="categories__item">
-                            <button class="categories__button" type="button">
+                            <button class="categories__button categories__button--active" type="button">
                                 <svg class="svg svg--categories">
                                     <use href="./images/icons/sprite.svg#burger"></use>
                                 </svg>
@@ -156,97 +156,117 @@
                     <ul class="product__list">
 
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/2.jpg"
-                                    alt="фотографія чізбургера з листям салату" width="140" height="140">
-                                <h3 class="product__title">Чізбургер з листям салату</h3>
-                                <span class="product__price">160 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/2.jpg"
+                                        alt="фотографія чізбургера з листям салату" width="140" height="140">
+                                    <h3 class="product__title">Чізбургер з листям салату</h3>
+                                    <span class="product__price">160 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
 
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/1.jpg" alt="фотографія Біфбургера"
-                                    width="140" height="140">
-                                <h3 class="product__title">Біфбургер</h3>
-                                <span class="product__price">190 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/1.jpg"
+                                        alt="фотографія Біфбургера" width="140" height="140">
+                                    <h3 class="product__title">Біфбургер</h3>
+                                    <span class="product__price">190 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
 
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/3.jpg"
-                                    alt="фотографія королівського чізбургера" width="140" height="140">
-                                <h3 class="product__title">Королівський чізбургер</h3>
-                                <span class="product__price">260 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/3.jpg"
+                                        alt="фотографія королівського чізбургера" width="140" height="140">
+                                    <h3 class="product__title">Королівський чізбургер</h3>
+                                    <span class="product__price">260 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
 
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/4.jpg"
-                                    alt="фотографія чорного гамбургера" width="140" height="140">
-                                <h3 class="product__title">Чорний гамбургер</h3>
-                                <span class="product__price">199 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/4.jpg"
+                                        alt="фотографія чорного гамбургера" width="140" height="140">
+                                    <h3 class="product__title">Чорний гамбургер</h3>
+                                    <span class="product__price">199 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/5.jpg" alt="фотографыя чікен бургера"
-                                    width="140" height="140">
-                                <h3 class="product__title">Чікен бургер</h3>
-                                <span class="product__price">180 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/5.jpg"
+                                        alt="фотографыя чікен бургера" width="140" height="140">
+                                    <h3 class="product__title">Чікен бургер</h3>
+                                    <span class="product__price">180 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/2.jpg"
-                                    alt="фотографія чізбургера з листям салату" width="140" height="140">
-                                <h3 class="product__title">Чізбургер з листям салату</h3>
-                                <span class="product__price">160 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/2.jpg"
+                                        alt="фотографія чізбургера з листям салату" width="140" height="140">
+                                    <h3 class="product__title">Чізбургер з листям салату</h3>
+                                    <span class="product__price">160 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/1.jpg" alt="фотографія Біфбургера"
-                                    width="140" height="140">
-                                <h3 class="product__title">Біфбургер</h3>
-                                <span class="product__price">190 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/1.jpg"
+                                        alt="фотографія Біфбургера" width="140" height="140">
+                                    <h3 class="product__title">Біфбургер</h3>
+                                    <span class="product__price">190 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/3.jpg"
-                                    alt="фотографія королівського чізбургера" width="140" height="140">
-                                <h3 class="product__title">Королівський чізбургер</h3>
-                                <span class="product__price">260 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/3.jpg"
+                                        alt="фотографія королівського чізбургера" width="140" height="140">
+                                    <h3 class="product__title">Королівський чізбургер</h3>
+                                    <span class="product__price">260 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/4.jpg"
-                                    alt="фотографія чорного гамбургера" width="140" height="140">
-                                <h3 class="product__title">Чорний гамбургер</h3>
-                                <span class="product__price">199 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/4.jpg"
+                                        alt="фотографія чорного гамбургера" width="140" height="140">
+                                    <h3 class="product__title">Чорний гамбургер</h3>
+                                    <span class="product__price">199 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
                         <li class="product__item">
-                            <article class="product__card">
-                                <img class="product__img" src="./images/categories/5.jpg" alt="фотографыя чікен бургера"
-                                    width="140" height="140">
-                                <h3 class="product__title">Чікен бургер</h3>
-                                <span class="product__price">180 грн.</span>
-                                <button class="product__btn button" type="button">До кошика</button>
-                            </article>
+                            <a class="product__link" href="#">
+                                <article class="product__card">
+                                    <img class="product__img" src="./images/categories/5.jpg"
+                                        alt="фотографыя чікен бургера" width="140" height="140">
+                                    <h3 class="product__title">Чікен бургер</h3>
+                                    <span class="product__price">180 грн.</span>
+                                    <button class="product__btn button" type="button">До кошика</button>
+                                </article>
+                            </a>
                         </li>
                     </ul>
 
