--- a/app/index.html
+++ b/app/index.html
@@ -378,7 +378,7 @@
                             </a>
                         </li>
                         <li class="address__item">
-                            <a class="address__link" href="">
+                            <a class="address__link" href="tel:+380501112233">
                                 <svg class="svg svg--address" width="24" height="24">
                                     <use href="./images/icons/sprite.svg#tell"></use>
                                 </svg>
@@ -386,7 +386,7 @@
                             </a>
                         </li>
                         <li class="address__item">
-                            <a class="address__link" href="">
+                            <a class="address__link" href="mailto:support@sfood.com">
                                 <svg class="svg svg--address" width="24" height="24">
                                     <use href="./images/icons/sprite.svg#message"></use>
                                 </svg>
