--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
                 </a>
 
                 <ul class="menu__list">
-                    <li class="menu__item menu__item--active">
-                        <a class="menu__link" href="">Головна</a>
+                    <li class="menu__item">
+                        <a class="menu__link menu__link--active" href="">Головна</a>
                     </li>
 
                     <li class="menu__item">
@@ -89,7 +89,7 @@
                             Замовити
                         </button>
 
-                        <a class="hero__link" href="#">Детальніше</a>
+                        <a class="link hero__link" href="#">Детальніше</a>
 
                     </div>
 
@@ -101,14 +101,14 @@
             <div class="container">
                 <div class="categories__inner">
 
-                    <h2 class="title">
+                    <h2 class="title categories__title">
                         Популярне в категоріях
                     </h2>
 
                     <ul class="categories__filter">
 
                         <li class="categories__item">
-                            <button class="categories__button categories__button--active" type="button">
+                            <button class="button categories__button categories__button--active" type="button">
                                 <svg class="svg svg--categories">
                                     <use href="./images/icons/sprite.svg#burger"></use>
                                 </svg>
@@ -117,7 +117,7 @@
                         </li>
 
                         <li class="categories__item">
-                            <button class="categories__button" type="button">
+                            <button class="button categories__button" type="button">
                                 <svg class="svg svg--categories">
                                     <use href="./images/icons/sprite.svg#pizza"></use>
                                 </svg>
@@ -126,7 +126,7 @@
                         </li>
 
                         <li class="categories__item">
-                            <button class="categories__button" type="button">
+                            <button class="button categories__button" type="button">
                                 <svg class="svg svg--categories">
                                     <use href="./images/icons/sprite.svg#sandwich"></use>
                                 </svg>
@@ -135,7 +135,7 @@
                         </li>
 
                         <li class="categories__item">
-                            <button class="categories__button" type="button">
+                            <button class="button categories__button" type="button">
                                 <svg class="svg svg--categories">
                                     <use href="./images/icons/sprite.svg#asia"></use>
                                 </svg>
@@ -144,7 +144,7 @@
                         </li>
 
                         <li class="categories__item">
-                            <button class="categories__button" type="button">
+                            <button class="button categories__button" type="button">
                                 <svg class="svg svg--categories">
                                     <use href="./images/icons/sprite.svg#dish"></use>
                                 </svg>
@@ -160,7 +160,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/2.jpg"
                                         alt="фотографія чізбургера з листям салату" width="140" height="140">
-                                    <h3 class="product__title">Чізбургер з листям салату</h3>
+                                    <h3 class="link product__title">Чізбургер з листям салату</h3>
                                     <span class="product__price">160 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -172,7 +172,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/1.jpg"
                                         alt="фотографія Біфбургера" width="140" height="140">
-                                    <h3 class="product__title">Біфбургер</h3>
+                                    <h3 class="link product__title">Біфбургер</h3>
                                     <span class="product__price">190 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -184,7 +184,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/3.jpg"
                                         alt="фотографія королівського чізбургера" width="140" height="140">
-                                    <h3 class="product__title">Королівський чізбургер</h3>
+                                    <h3 class="link product__title">Королівський чізбургер</h3>
                                     <span class="product__price">260 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -196,7 +196,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/4.jpg"
                                         alt="фотографія чорного гамбургера" width="140" height="140">
-                                    <h3 class="product__title">Чорний гамбургер</h3>
+                                    <h3 class="link product__title">Чорний гамбургер</h3>
                                     <span class="product__price">199 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -207,7 +207,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/5.jpg"
                                         alt="фотографыя чікен бургера" width="140" height="140">
-                                    <h3 class="product__title">Чікен бургер</h3>
+                                    <h3 class="link product__title">Чікен бургер</h3>
                                     <span class="product__price">180 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -218,7 +218,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/2.jpg"
                                         alt="фотографія чізбургера з листям салату" width="140" height="140">
-                                    <h3 class="product__title">Чізбургер з листям салату</h3>
+                                    <h3 class="link product__title">Чізбургер з листям салату</h3>
                                     <span class="product__price">160 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -229,7 +229,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/1.jpg"
                                         alt="фотографія Біфбургера" width="140" height="140">
-                                    <h3 class="product__title">Біфбургер</h3>
+                                    <h3 class="link product__title">Біфбургер</h3>
                                     <span class="product__price">190 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -240,7 +240,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/3.jpg"
                                         alt="фотографія королівського чізбургера" width="140" height="140">
-                                    <h3 class="product__title">Королівський чізбургер</h3>
+                                    <h3 class="link product__title">Королівський чізбургер</h3>
                                     <span class="product__price">260 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -251,7 +251,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/4.jpg"
                                         alt="фотографія чорного гамбургера" width="140" height="140">
-                                    <h3 class="product__title">Чорний гамбургер</h3>
+                                    <h3 class="link product__title">Чорний гамбургер</h3>
                                     <span class="product__price">199 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -262,7 +262,7 @@
                                 <article class="product__card">
                                     <img class="product__img" src="./images/categories/5.jpg"
                                         alt="фотографыя чікен бургера" width="140" height="140">
-                                    <h3 class="product__title">Чікен бургер</h3>
+                                    <h3 class="link product__title">Чікен бургер</h3>
                                     <span class="product__price">180 грн.</span>
                                     <button class="product__btn button" type="button">До кошика</button>
                                 </article>
@@ -270,7 +270,7 @@
                         </li>
                     </ul>
 
-                    <a class="categories__more" href="#">
+                    <a class="link categories__more" href="#">
                         Показати ще
                     </a>
 
@@ -306,62 +306,62 @@
 
                 <ul class="footer__list">
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Як це працює
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Про нас
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Застосунок
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Продукти
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Новини
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Блог
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Страви
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Партнери
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Що нового?
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Меню
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             ЧаПи
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer__link" href="#">
+                        <a class="link footer__link" href="#">
                             Мапа сайту
                         </a>
                     </li>
@@ -370,7 +370,7 @@
                 <address class="address">
                     <ul class="address__list">
                         <li class="address__item">
-                            <a class="address__link" href="">
+                            <a class="link address__link" href="">
                                 <svg class="svg svg--address" width="24" height="24">
                                     <use href="./images/icons/sprite.svg#location"></use>
                                 </svg>
@@ -378,7 +378,7 @@
                             </a>
                         </li>
                         <li class="address__item">
-                            <a class="address__link" href="tel:+380501112233">
+                            <a class="link address__link" href="tel:+380501112233">
                                 <svg class="svg svg--address" width="24" height="24">
                                     <use href="./images/icons/sprite.svg#tell"></use>
                                 </svg>
@@ -386,7 +386,7 @@
                             </a>
                         </li>
                         <li class="address__item">
-                            <a class="address__link" href="mailto:support@sfood.com">
+                            <a class="link address__link" href="mailto:support@sfood.com">
                                 <svg class="svg svg--address" width="24" height="24">
                                     <use href="./images/icons/sprite.svg#message"></use>
                                 </svg>
