--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
         <section class="hero section">
             <div class="container">
 
-                <div class="hero__inner" style="background-image: url('./images/hero/scooter_guy.png');">
+                <div class="hero__inner" style="">
 
                     <div class="hero__content">
 
@@ -158,7 +158,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/2.jpg"
+                                    <img class="product__img" src="./images/categories/2@1x.jpg"
                                         alt="фотографія чізбургера з листям салату" width="140" height="140">
                                     <h3 class="link product__title">Чізбургер з листям салату</h3>
                                     <span class="product__price">160 грн.</span>
@@ -170,7 +170,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/1.jpg"
+                                    <img class="product__img" src="./images/categories/1@1x.jpg"
                                         alt="фотографія Біфбургера" width="140" height="140">
                                     <h3 class="link product__title">Біфбургер</h3>
                                     <span class="product__price">190 грн.</span>
@@ -182,7 +182,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/3.jpg"
+                                    <img class="product__img" src="./images/categories/3@1x.jpg"
                                         alt="фотографія королівського чізбургера" width="140" height="140">
                                     <h3 class="link product__title">Королівський чізбургер</h3>
                                     <span class="product__price">260 грн.</span>
@@ -194,7 +194,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/4.jpg"
+                                    <img class="product__img" src="./images/categories/4@1x.jpg"
                                         alt="фотографія чорного гамбургера" width="140" height="140">
                                     <h3 class="link product__title">Чорний гамбургер</h3>
                                     <span class="product__price">199 грн.</span>
@@ -205,7 +205,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/5.jpg"
+                                    <img class="product__img" src="./images/categories/5@1x.jpg"
                                         alt="фотографыя чікен бургера" width="140" height="140">
                                     <h3 class="link product__title">Чікен бургер</h3>
                                     <span class="product__price">180 грн.</span>
@@ -216,7 +216,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/2.jpg"
+                                    <img class="product__img" src="./images/categories/2@1x.jpg"
                                         alt="фотографія чізбургера з листям салату" width="140" height="140">
                                     <h3 class="link product__title">Чізбургер з листям салату</h3>
                                     <span class="product__price">160 грн.</span>
@@ -227,7 +227,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/1.jpg"
+                                    <img class="product__img" src="./images/categories/1@1x.jpg"
                                         alt="фотографія Біфбургера" width="140" height="140">
                                     <h3 class="link product__title">Біфбургер</h3>
                                     <span class="product__price">190 грн.</span>
@@ -238,7 +238,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/3.jpg"
+                                    <img class="product__img" src="./images/categories/3@1x.jpg"
                                         alt="фотографія королівського чізбургера" width="140" height="140">
                                     <h3 class="link product__title">Королівський чізбургер</h3>
                                     <span class="product__price">260 грн.</span>
@@ -249,7 +249,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/4.jpg"
+                                    <img class="product__img" src="./images/categories/4@1x.jpg"
                                         alt="фотографія чорного гамбургера" width="140" height="140">
                                     <h3 class="link product__title">Чорний гамбургер</h3>
                                     <span class="product__price">199 грн.</span>
@@ -260,7 +260,7 @@
                         <li class="product__item">
                             <a class="product__link" href="#">
                                 <article class="product__card">
-                                    <img class="product__img" src="./images/categories/5.jpg"
+                                    <img class="product__img" src="./images/categories/5@1x.jpg"
                                         alt="фотографыя чікен бургера" width="140" height="140">
                                     <h3 class="link product__title">Чікен бургер</h3>
                                     <span class="product__price">180 грн.</span>
