--- a/src/index.html
+++ b/src/index.html
@@ -37,25 +37,20 @@
 
                     <ul class="user-nav">
                         <li class="user-nav__item">
-                            <button class="user-nav__btn user-nav__btn--search" type="button">
-
-                                <a class="icon-mask icon-mask--header" href="#"
-                                    style="-webkit-mask-image: url(./images/icons/sprite.svg#icon-search);"></a>
-
+                            <button class="user-nav--btn" type="button">
                                 <span class="sr-only">
                                     Почати пошук
                                 </span>
+                                <span class="icon-mask icon-mask--icon-search"></span>
                             </button>
                         </li>
 
                         <li class="user-nav__item">
-                            <button class="user-nav__btn user-nav__btn--cart" type="button">
-                                <svg class="icon-sprite icon-sprite--header" width="19" height="18">
-                                    <use href="./images/icons/sprite.svg#icon-cart"></use>
-                                </svg>
+                            <button class="user-nav--btn" type="button">
                                 <span class="sr-only">
                                     Відкрити корзину
                                 </span>
+                                <span class="icon-mask icon-mask--icon-cart"></span>
                                 <span class="user-nav__number">4</span>
                             </button>
                         </li>
@@ -89,11 +84,11 @@
                                 рахунок
                             </p>
 
-                            <button class="button hero__button" type="button">
+                            <button class="btn hero__btn" type="button">
                                 Замовити
                             </button>
 
-                            <a class="link hero__link" href="#">Детальніше</a>
+                            <a class="link link--underline" href="#">Детальніше</a>
 
                         </div>
 
@@ -112,46 +107,36 @@
                         <ul class="categories__filter">
 
                             <li class="categories__item">
-                                <button class="button categories__button categories__button--active" type="button">
-                                    <svg class="icon-sprite icon-sprite--categories">
-                                        <use href="./images/icons/sprite.svg#burger"></use>
-                                    </svg>
+                                <button class="btn categories__btn categories__button--active" type="button">
+                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-burger"></span>
                                     Бургери
                                 </button>
                             </li>
 
                             <li class="categories__item">
-                                <button class="button categories__button" type="button">
-                                    <svg class="icon-sprite icon-sprite--categories">
-                                        <use href="./images/icons/sprite.svg#pizza"></use>
-                                    </svg>
+                                <button class="btn categories__btn" type="button">
+                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-pizza"></span>
                                     Піца
                                 </button>
                             </li>
 
                             <li class="categories__item">
-                                <button class="button categories__button" type="button">
-                                    <svg class="icon-sprite icon-sprite--categories">
-                                        <use href="./images/icons/sprite.svg#sandwich"></use>
-                                    </svg>
+                                <button class="btn categories__btn" type="button">
+                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-sandvich"></span>
                                     Сендвічі
                                 </button>
                             </li>
 
                             <li class="categories__item">
-                                <button class="button categories__button" type="button">
-                                    <svg class="icon-sprite icon-sprite--categories">
-                                        <use href="./images/icons/sprite.svg#asia"></use>
-                                    </svg>
+                                <button class="btn categories__btn" type="button">
+                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-asia"></span>
                                     Азійська кухня
                                 </button>
                             </li>
 
                             <li class="categories__item">
-                                <button class="button categories__button" type="button">
-                                    <svg class="icon-sprite icon-sprite--categories">
-                                        <use href="./images/icons/sprite.svg#dish"></use>
-                                    </svg>
+                                <button class="btn categories__btn" type="button">
+                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-dish"></span>
                                     Cети
                                 </button>
                             </li>
@@ -168,7 +153,7 @@
                                         <h3 class="link product-card__title">Чізбургер з листям салату</h3>
                                         <span class="product-card__price">160 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -182,7 +167,7 @@
                                         <h3 class="link product-card__title">Біфбургер</h3>
                                         <span class="product-card__price">190 грн.</span>
                                     </a>
-                                    <button class="button product-card__btn" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -196,7 +181,7 @@
                                         <h3 class="link product-card__title">Королівський чізбургер</h3>
                                         <span class="product-card__price">260 грн.</span>
                                     </a>
-                                    <button class="button product-card__btn" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -210,7 +195,7 @@
                                         <h3 class="link product-card__title">Чорний гамбургер</h3>
                                         <span class="product-card__price">199 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -223,7 +208,7 @@
                                         <h3 class="link product-card__title">Чікен бургер</h3>
                                         <span class="product-card__price">180 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -236,7 +221,7 @@
                                         <h3 class="link product-card__title">Чізбургер з листям салату</h3>
                                         <span class="product-card__price">160 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -249,7 +234,7 @@
                                         <h3 class="link product-card__title">Біфбургер</h3>
                                         <span class="product-card__price">190 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -262,7 +247,7 @@
                                         <h3 class="link product-card__title">Королівський чізбургер</h3>
                                         <span class="product-card__price">260 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -275,7 +260,7 @@
                                         <h3 class="link product-card__title">Чорний гамбургер</h3>
                                         <span class="product-card__price">199 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
@@ -288,14 +273,14 @@
                                         <h3 class="link product-card__title">Чікен бургер</h3>
                                         <span class="product-card__price">180 грн.</span>
                                     </a>
-                                    <button class="product-card__btn button" type="button">До кошика</button>
+                                    <button class="btn product-card__btn" type="button">До кошика</button>
                                 </article>
 
                             </li>
                         </ul>
 
                         <button class="categories__more" type="button">
-                            Показати ще
+                            <span class="categories__more--text">Показати ще</span>
                         </button>
 
                     </div>
@@ -308,11 +293,13 @@
 
                 <div class="footer__inner">
 
-                    <a class="logo form__logo" href="#">
+                    <div class="footer__box">
+
+                    <a class="logo footer__logo" href="#">
                         <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
                     </a>
 
-                    <form class="form" action="">
+                    <form class="form" action="#">
 
                         <label class="form__label" for="email">
                             <input class="form__input" type="email" name="email" id="email" placeholder="Ваш email"
@@ -320,14 +307,14 @@
                             <span class="sr-only">Впишіть ваш імейл</span>
                         </label>
 
-                        <button class="button form__button" type="submit">
-                            <svg class="icon-sprite" width="16" height="16">
-                                <use href="./images/icons/sprite.svg#telegram"></use>
-                            </svg>
+                        <button class="btn form__btn" type="submit">
+                            <span class="icon-mask form__btn--icon-telegram"></span>
                             Підписатися
                         </button>
 
                     </form>
+
+                </div>
 
                     <ul class="footer__list">
                         <li class="footer__item">
@@ -395,26 +382,20 @@
                     <address class="address">
                         <ul class="address__list">
                             <li class="address__item">
-                                <a class="link address__link" href="">
-                                    <svg class="icon-sprite" width="24" height="24">
-                                        <use href="./images/icons/sprite.svg#location"></use>
-                                    </svg>
+                                <a class="icon-mask address__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></a>
+                                <a class="link address__link" href="#">
                                     вул. Т.Г.Шевченка, 1
                                 </a>
                             </li>
                             <li class="address__item">
+                                <a class="icon-mask address__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></a>
                                 <a class="link address__link" href="tel:+380501112233">
-                                    <svg class="icon-sprite" width="24" height="24">
-                                        <use href="./images/icons/sprite.svg#tell"></use>
-                                    </svg>
                                     380501112233
                                 </a>
                             </li>
                             <li class="address__item">
+                                <a class="icon-mask address__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></a>
                                 <a class="link address__link" href="mailto:support@sfood.com">
-                                    <svg class="icon-sprite" width="24" height="24">
-                                        <use href="./images/icons/sprite.svg#message"></use>
-                                    </svg>
                                     support@sfood.com
                                 </a>
                             </li>
@@ -423,36 +404,24 @@
                         <ul class="social">
 
                             <li class="social__item">
-                                <a class="social__link" href="">
-                                    <svg class="icon-sprite" width="15" height="18">
-                                        <use href="./images/icons/sprite.svg#facebook"></use>
-                                    </svg>
+                                    <a class="icon-mask social__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></a>
                                     <span class="sr-only">
                                         Відкрити сторінку Facebook
                                     </span>
-                                </a>
                             </li>
 
                             <li class="social__item">
-                                <a class="social__link" href="">
-                                    <svg class="icon-sprite" width="19" height="19">
-                                        <use href="./images/icons/sprite.svg#twitter"></use>
-                                    </svg>
+                                    <a class="icon-mask social__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></a>
                                     <span class="sr-only">
                                         Відкрити сторінку Twitter
                                     </span>
-                                </a>
                             </li>
 
                             <li class="social__item">
-                                <a class="social__link" href="">
-                                    <svg class="icon-sprite" width="20" height="18">
-                                        <use href="./images/icons/sprite.svg#instagram"></use>
-                                    </svg>
+                                    <a class="icon-mask social__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></a>
                                     <span class="sr-only">
                                         Відкрити сторінку Instagram
                                     </span>
-                                </a>
                             </li>
 
                         </ul>
